--- a/wp/wp-deploy-no-vol.yml
+++ b/wp/wp-deploy-no-vol.yml
@@ -25,7 +25,7 @@ spec:
         env:
           - name: WORDPRESS_DB_PASSWORD
             valueFrom:
-              secertKeyRef:
+              secretKeyRef:
                name: wp-mysecret
                key: db-password
           - name: WORDPRESS_DB_HOST
@@ -42,6 +42,6 @@ spec:
         env:
           - name: MYSQL_ROOT_PASSWORD
             valueFrom:
-              secertKeyRef:
-              name: wp-mysecret
-              key: db-password  
+              secretKeyRef:
+               name: wp-mysecret
+               key: db-password  
