--- a/wp-mysql/sec-pass.yml
+++ b/wp-mysql/sec-pass.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: wp-mysecret
+  name: mysql-pass
 type: Opaque
 data:
   db-password: U0A1UjU0QlhQZDV2bGJkUFl2MGE=
