--- a/wp/wp-deploy-no-vol.yml
+++ b/wp/wp-deploy-no-vol.yml
@@ -29,7 +29,7 @@ spec:
                name: wp-mysecret
                key: db-password
           - name: WORDPRESS_DB_HOST
-            value: 127.0.0.1
+            value: mysql
       - name: mysql
         image: mysql:5.7
         resources:
